testing the about page

--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
       </ul>
     </div>
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <header>
   <div class="jumbotron">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>About Us</h1>
+          <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>About Us: Aniruth was here</h1>
           <p style="font-size:21px" class="text-center">Absolute Rehab Center is a physical therapist owned and operated rehabilitation practice offering patients hands on personalized service by highly skilled and dedicated therapists. We are the premier provider of physical rehabilitation services dedicated to our patients' rapid and satisfactory recovery. A patient-empowered approach implements patient education, involvement and their concerns into a treatment plan. Ritu Koul, the Clinical Director is a licensed Physical Therapist with over 16 years of clinical and management experience. Her areas of expertise in treating patients range from orthopedic and sports injuries to pain management and spine rehabilitation. She has a special interest in womenӳ health program, yoga and Pranayama (yogic breathing exercises). , email us at pt@absrehab.com or just call us with any questions at 1-630-631-6253 </p>
           <div style="float: left; width: 50%;"> </div>
           <div style="float: right; width: 50%;"> </div>
@@ -43,9 +43,9 @@
     </div>
   </div>
 </header>
-<!-- / HEADER --> 
+<!-- / HEADER -->
 
-<!--  SECTION-1 --> 
+<!--  SECTION-1 -->
 
 <!-- FOOTER -->
 
@@ -58,11 +58,11 @@
     </div>
   </div>
 </footer>
-<!-- / FOOTER --> 
+<!-- / FOOTER -->
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
