--- a/index.html
+++ b/index.html
@@ -3,6 +3,37 @@
 TESTING
 <html lang="en">
 <head>
+  <style>
+  body {
+    margin: 0;
+    background-color: #f1f1f1;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  #navbar {
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display:block;
+    transition: top 0.3s;
+  }
+
+  #navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 15px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  #navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  </style>
 <script type="text/javascript">
 <!--
 if (screen.width <= 699) {
@@ -18,6 +49,18 @@ window.location.replace("http://m.absrehab.com");
 <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
+
+  <div id="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">Mission</a>
+    <a href="#about">About Us</a>
+    <a href="#appointments">Appointments</a>
+    <a href="#events">Events</a>
+    <a href="#contact">Contact Us</a>
+
+
+  </div>
+<!--
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header"> <a href="index.html" target="_self"><img src="img/logo.png" alt="Absolute Rehab Logo" height="50"></a></div>
@@ -36,7 +79,7 @@ window.location.replace("http://m.absrehab.com");
       </ul>
     </div>
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 
 <!-- HEADER -->
@@ -78,9 +121,9 @@ window.location.replace("http://m.absrehab.com");
     </div>
   </div>
 </header>
-<!-- / HEADER --> 
+<!-- / HEADER -->
 
-<!--  SECTION-1 --> 
+<!--  SECTION-1 -->
 
 <!-- FOOTER -->
 
@@ -93,11 +136,24 @@ window.location.replace("http://m.absrehab.com");
     </div>
   </div>
 </footer>
-<!-- / FOOTER --> 
+<!-- / FOOTER -->
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script>
+var prevScrollpos = window.pageYOffset;
+window.onscroll = function() {
+var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
+  }
+  prevScrollpos = currentScrollPos;
+}
+</script>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
