Taskbar+extended page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 TESTING
 <html lang="en">
@@ -84,7 +84,6 @@ window.location.replace("http://m.absrehab.com");
 
 <!-- HEADER -->
 <header>
-
   <div class="jumbotron">
     <div class="container">
       <div class="row">
@@ -117,6 +116,31 @@ window.location.replace("http://m.absrehab.com");
           </div>
           <p class="text-center">&nbsp; </p>
         </div>
+      </div>
+    </div>
+  </div>
+ <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+        <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>Our Services</h1>
+          <p style="font-size:21px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
+          <p style="font-size:21px" class="text-center">Our highly skilled and experienced therapists are experts in their field. We utilize the most progressive treatment options and state-of-the-art technology to ensure the best possible recovery. Our reputation is built on the promise to exceed your expectations. </p>
+          <p class="text-center">You can view our brochure <a href="brochure.pdf">here</a>.</p>
+          <p style="font-size:21px" class="text-center">&nbsp;</p>
+          <div style="float: left; width: 50%;"> </div> </div> </div> </div>
+<div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>Contact Us</h1>
+          <p style="font-size:21px" class="text-center">If you want to contact us, you can call us at (630) 631-6253 or email us at <a href="mailto:pt@absrehab.com">pt@absrehab.com</a>. Alternately, you could fill out the form <a href="appointments.html">here</a>.</p>
+          <p style="font-size:21px" class="text-center">Our location is at 1012 W. 95th Street, Suite – 10 Naperville, IL 60564. You can view the map below to see our location.</p>
+          <center>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.034431376806!2d-88.16869370405757!3d41.709447632261266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e587f42401bdf%3A0x126bb5ff640b8b44!2sAbsolute+Rehab+Physical+Therapy+%26+Sports+Medicine!5e0!3m2!1sen!2sus!4v1500954801124" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </center>
+          <div style="float: left; width: 50%;"> </div>
+      <p class="text-center">&nbsp; </p>
       </div>
     </div>
   </div>
