changed taskbar color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ TESTING
   }
 
   #navbar {
-    background-color: #333;
+    background-color: #337aa4;
     position: fixed;
     top: 0;
     width: 100%;
