fixed navbar overlap problem

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ TESTING
   #navbar {
     background-color: #337aa4;
     position: fixed;
+    z-index: 2;
     top: 0;
     width: 100%;
     display:block;
@@ -51,6 +52,7 @@ window.location.replace("http://m.absrehab.com");
 <body>
 
   <div id="navbar">
+
     <a href="#home">Home</a>
     <a href="#news">Mission</a>
     <a href="#about">About Us</a>
