icon nav padding fixed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ window.location.replace("http://m.absrehab.com");
 <body>
 
   <div id="navbar">
-    <img src="favicon2.png" align="left" width="50px" length="50px"</img>
+    <img src="favicon2.png" align="left" width="50px" length="50px" padding:"5px"</img>
     <a href="#home">Home</a>
     <a href="#news">Mission</a>
     <a href="#about">About Us</a>
