--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 ﻿<!DOCTYPE html>
-
-TESTING
 <html lang="en">
 <head>
   <style>
@@ -51,7 +49,7 @@ window.location.replace("http://m.absrehab.com");
 <link rel="icon" type="image/png" href="favicon.png" />
 <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+<body background = " wood.jpg">
 
   <div id="navbar">
     <img src="favicon2.png" align="left" width="50px" length="50px" padding:"5px"</img>
