--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
+<head <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">>
   <style>
   body {
     margin: 0;
