--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ window.location.replace("http://m.absrehab.com");
 </head>
 <body background = " wood.jpg">
 
+
+
   <div id="navbar">
     <img src="favicon2.png" align="left" width="50px" length="50px" padding:"5px"</img>
     <a href="#home">Home</a>
@@ -86,6 +88,9 @@ window.location.replace("http://m.absrehab.com");
 
 <!-- HEADER -->
 <header>
+
+
+
   <div class="jumbotron">
     <div class="container">
       <div class="row">
@@ -121,6 +126,62 @@ window.location.replace("http://m.absrehab.com");
       </div>
     </div>
   </div>
+
+<h2>Automatic Slideshow</h2>
+<p>Change image every 2 seconds:</p>
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="ferrari.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="ferrari.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="ferrari.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
+
  <div class="jumbotron">
     <div class="container">
       <div class="row">
@@ -134,6 +195,9 @@ window.location.replace("http://m.absrehab.com");
 
 </header>
 <!-- / HEADER -->
+
+
+
 
 <!--  SECTION-1 -->
 
@@ -161,6 +225,9 @@ var currentScrollPos = window.pageYOffset;
   }
   prevScrollpos = currentScrollPos;
 }
+
+
+
 </script>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
