--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@ window.location.replace("http://m.absrehab.com");
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="ferrari.jpg" style="width:100%">
+  <img src="img/office.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="ferrari.jpg" style="width:100%">
+  <img src="img/oldlady.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="ferrari.jpg" style="width:100%">
+  <img src="img/140X140.gif" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
