--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
   body {
     margin: 0;
-    background-color: #f1f1f1;
+    background-color: #270B61;
     font-family: Arial, Helvetica, sans-serif;
   }
 
@@ -49,7 +49,7 @@ window.location.replace("http://m.absrehab.com");
 <link rel="icon" type="image/png" href="favicon.png" />
 <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body background = " wood.jpg">
+<body background = "img/blue.jpg">
 
 
 
@@ -97,61 +97,66 @@ window.location.replace("http://m.absrehab.com");
         <div class="col-xs-12">
           <h1 class="text-center"><img src="img/logo.png" alt="Absolute Rehab Logo" height="100%" /img></h1>
           <p style="font-size:18px" class="text-center">Absolute Rehab Center is the premier provider of physical rehabilitation services. We are dedicated to our patients' rapid and satisfactory recovery. Absolute Rehab offers a hands-on, service-oriented approach that our patients value.</p>
-          <div style="float: left; width: 50%;"> </div>
-          <ul class="col-lg-3">
-          </ul>
-          <ul style="font-size:14px" class="col-lg-3 col-md-6">
-            <li>Pain Management</li>
-            <li>Functional Orthopedics</li>
-            <li>Spine/neck & low back conditions</li>
-            <li>Manual Therapy</li>
-            <li>Massage Therapy</li>
-            <li>Pediatric and Adult Rehab</li>
-            <li>Arthritis</li>
-            <li>Headaches</li>
-          </ul>
-          <div style="float: right; width: 50%;">
-            <ul style="font-size:14px" class="col-lg-6">
-              <li>Myofascial pain/ Fibromyalgia</li>
-              <li>Women Health Program</li>
-              <li>Pinched Nerves</li>
-              <li>Sports injuries</li>
-              <li>Work Conditioning</li>
-              <li>Asthma</li>
-              <li>Yoga & Breathing Exercise Program</li>
-            </ul>
-          </div>
-          <p class="text-center">&nbsp; </p>
+<div class="multi-column">
+<div class="column">
+  <ul>
+      <li>Pain Management</li>
+      <li>Functional Orthopedics</li>
+      <li>Spine/Neck & Low Back Conditions</li>
+      <li>Women Health Program</li>
+  </ul>
+</div>
+
+<div class="column">
+  <ul>
+      <li>Manual Therapy</li>
+      <li>Massage Therapy</li>
+      <li>Pediatric and Adult Rehab</li>
+      <li>Pinched Nerves</li>
+  </ul>
+</div>
+
+<div class="column">
+  <ul>
+      <li>Arthritis</li>
+      <li>Headaches</li>
+      <li>Myofascial pain/ Fibromyalgia</li>
+      <li>Sports injuries</li>
+  </ul>
+</div>
+<div class="column">
+    <ul>
+      <li>Work Conditioning</li>
+      <li>Asthma</li>
+      <li>Yoga & Breathing
+    </ul>
+  </div>
+
+</div>
         </div>
       </div>
     </div>
   </div>
 
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
-
+<div class="midbox">
 <div class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img/office.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="img/office.jpg" style="width:100%">
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img/oldlady.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="img/37388324-minimal-wallpaper.jpg" style="width:100%">
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="img/140X140.gif" style="width:100%">
-  <div class="text">Caption Three</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="img/DroneShore.png" style="width:100%">
+  </div>
 
 </div>
-<br>
 
 <div style="text-align:center">
   <span class="dot"></span>
@@ -159,6 +164,12 @@ window.location.replace("http://m.absrehab.com");
   <span class="dot"></span>
 </div>
 
+<div class="bookApp">
+  <h2> Book an Appointment Today! </h2>
+  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel metus ut arcu facilisis tristique. Nulla sed tellus porta, pellentesque mauris vitae, posuere leo. Integer hendrerit dapibus felis, in malesuada enim faucibus in. Maecenas lacinia dolor non scelerisque mattis. Ut malesuada ornare est id tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus nec eleifend odio, non pellentesque lectus.</p>
+</div>
+
+</div>
 <script>
 var slideIndex = 0;
 showSlides();
