--- a/index.html
+++ b/index.html
@@ -96,43 +96,10 @@ window.location.replace("http://m.absrehab.com");
       <div class="row">
         <div class="col-xs-12">
           <h1 class="text-center"><img src="img/logo.png" alt="Absolute Rehab Logo" height="100%" /img></h1>
-          <p style="font-size:18px" class="text-center">Absolute Rehab Center is the premier provider of physical rehabilitation services. We are dedicated to our patients' rapid and satisfactory recovery. Absolute Rehab offers a hands-on, service-oriented approach that our patients value.</p>
-<div class="multi-column">
-<div class="column">
-  <ul>
-      <li>Pain Management</li>
-      <li>Functional Orthopedics</li>
-      <li>Spine/Neck & Low Back Conditions</li>
-      <li>Women Health Program</li>
-  </ul>
-</div>
+          <p style="font-size:16px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
+          <p style="font-size:16px" class="text-center">Our highly skilled and experienced therapists are experts in their field. We utilize the most progressive treatment options and state-of-the-art technology to ensure the best possible recovery. Our reputation is built on the promise to exceed your expectations. </p>
+          <p style="font-size:16px" class="text-center">You can view our brochure <i><a href="brochure.pdf">here</a>.</i></p>
 
-<div class="column">
-  <ul>
-      <li>Manual Therapy</li>
-      <li>Massage Therapy</li>
-      <li>Pediatric and Adult Rehab</li>
-      <li>Pinched Nerves</li>
-  </ul>
-</div>
-
-<div class="column">
-  <ul>
-      <li>Arthritis</li>
-      <li>Headaches</li>
-      <li>Myofascial pain/ Fibromyalgia</li>
-      <li>Sports injuries</li>
-  </ul>
-</div>
-<div class="column">
-    <ul>
-      <li>Work Conditioning</li>
-      <li>Asthma</li>
-      <li>Yoga & Breathing
-    </ul>
-  </div>
-
-</div>
         </div>
       </div>
     </div>
@@ -199,10 +166,43 @@ function showSlides() {
         <div class="col-xs-12">
         <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>Our Services</h1>
           <p style="font-size:21px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
-          <p style="font-size:21px" class="text-center">Our highly skilled and experienced therapists are experts in their field. We utilize the most progressive treatment options and state-of-the-art technology to ensure the best possible recovery. Our reputation is built on the promise to exceed your expectations. </p>
-          <p class="text-center">You can view our brochure <a href="brochure.pdf">here</a>.</p>
-          <p style="font-size:21px" class="text-center">&nbsp;</p>
-          <div style="float: left; width: 50%;"> </div> </div> </div> </div>
+          <div class="multi-column">
+          <div class="column">
+            <ul>
+                <li>Pain Management</li>
+                <li>Functional Orthopedics</li>
+                <li>Spine/Neck & Low Back Conditions</li>
+                <li>Women Health Program</li>
+            </ul>
+          </div>
+          <div class="column">
+            <ul>
+                <li>Manual Therapy</li>
+                <li>Massage Therapy</li>
+                <li>Pediatric and Adult Rehab</li>
+                <li>Pinched Nerves</li>
+            </ul>
+          </div>
+
+          <div class="column">
+            <ul>
+                <li>Arthritis</li>
+                <li>Headaches</li>
+                <li>Myofascial pain/ Fibromyalgia</li>
+                <li>Sports injuries</li>
+            </ul>
+          </div>
+          <div class="column">
+              <ul>
+                <li>Work Conditioning</li>
+                <li>Asthma</li>
+                <li>Yoga & Breathing
+              </ul>
+            </div>
+
+          </div>
+
+          </div> </div> </div> </div>
 
 </header>
 <!-- / HEADER -->
