--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ window.location.replace("http://m.absrehab.com");
 </div>
 
 <div class="bookApp">
-  <h2> Book an Appointment Today! </h2>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel metus ut arcu facilisis tristique. Nulla sed tellus porta, pellentesque mauris vitae, posuere leo. Integer hendrerit dapibus felis, in malesuada enim faucibus in. Maecenas lacinia dolor non scelerisque mattis. Ut malesuada ornare est id tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus nec eleifend odio, non pellentesque lectus.</p>
+  <p> Ritu Koul, the Clinical Director is a licensed Physical Therapist with over 16 years of clinical and management experience. Her areas of expertise in treating patients range from orthopedic and sports injuries to pain management and spine rehabilitation. She has a special interest in women’s health program, yoga and pranayama (yogic breathing exercises).
+</p>
 </div>
 
 </div>
