--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ window.location.replace("http://m.absrehab.com");
         <li class="active"><a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a> </li>
         <li><a href="mission.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mission&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </li>
         <li><a href="about.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="services.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="appointments.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="contact.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
@@ -34,7 +33,7 @@ window.location.replace("http://m.absrehab.com");
       </ul>
     </div>
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 
 <!-- HEADER -->
@@ -45,40 +44,50 @@ window.location.replace("http://m.absrehab.com");
       <div class="row">
         <div class="col-xs-12">
           <h1 class="text-center"><img src="img/logo.png" alt="Absolute Rehab Logo" height="100%" /img></h1>
-          <p style="font-size:21px" class="text-center">Absolute Rehab Center is the premier provider of physical rehabilitation services. We are dedicated to our patients' rapid and satisfactory recovery. Absolute Rehab offers a hands-on, service-oriented approach that our patients value.</p>
-          <div style="float: left; width: 50%;"> </div>
-          <ul class="col-lg-3">
-          </ul>
-          <ul style="font-size:21px" class="col-lg-3 col-md-6">
-            <li>Pain Management</li>
-            <li>Functional Orthopedics</li>
-            <li>Spine/neck & low back conditions</li>
-            <li>Manual Therapy</li>
-            <li>Massage Therapy</li>
-            <li>Pediatric and Adult Rehab</li>
-            <li>Arthritis</li>
-            <li>Headaches</li>
-          </ul>
-          <div style="float: right; width: 50%;">
-            <ul style="font-size:21px" class="col-lg-6">
-              <li>Myofascial pain/ Fibromyalgia</li>
-              <li>Women Health Program</li>
-              <li>Pinched Nerves</li>
-              <li>Sports injuries</li>
-              <li>Work Conditioning</li>
-              <li>Asthma</li>
-              <li>Yoga & Breathing Exercise Program</li>
-            </ul>
-          </div>
-          <p class="text-center">&nbsp; </p>
+          <p style="font-size:16px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
+          <p style="font-size:16px" class="text-center">Our highly skilled and experienced therapists are experts in their field. We utilize the most progressive treatment options and state-of-the-art technology to ensure the best possible recovery. Our reputation is built on the promise to exceed your expectations. </p>
+          <p style="font-size:16px" class="text-center">You can view our brochure <i><a href="brochure.pdf">here</a>.</i></p>
+
         </div>
       </div>
     </div>
   </div>
+  <div class="jumbotron">
+   <div class="container">
+     <div class="row">
+       <div class="col-xs-12">
+       <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>Our Services</h1>
+         <p style="font-size:16px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
+         <div class= "multi-column">
+         <div class="column">
+           <ul>
+               <li>Pain Management</li>
+               <li>Functional Orthopedics</li>
+               <li>Spine/Neck & Low Back Conditions</li>
+               <li>Women Health Program</li>
+               <li>Manual Therapy</li>
+               <li>Massage Therapy</li>
+               <li>Pediatric and Adult Rehab</li>
+           </ul>
+         </div>
+         <div class="column">
+           <ul>
+               <li>Arthritis</li>
+               <li>Headaches</li>
+               <li>Myofascial pain/ Fibromyalgia</li>
+               <li>Sports injuries</li>
+               <li>Work Conditioning</li>
+               <li>Asthma</li>
+               <li>Yoga & Breathing</li>
+               <li>Pinched Nerves</li>
+           </ul>
+         </div>
+</div>
+         </div> </div> </div> </div>
 </header>
-<!-- / HEADER --> 
+<!-- / HEADER -->
 
-<!--  SECTION-1 --> 
+<!--  SECTION-1 -->
 
 <!-- FOOTER -->
 
@@ -91,11 +100,11 @@ window.location.replace("http://m.absrehab.com");
     </div>
   </div>
 </footer>
-<!-- / FOOTER --> 
+<!-- / FOOTER -->
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
