--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ window.location.replace("http://m.absrehab.com");
 <link rel="icon" type="image/png" href="favicon.png" />
 <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+<body background="img/blue.jpg">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header"> <a href="index.html" target="_self"><img src="img/logo.png" alt="Absolute Rehab Logo" height="50"></a></div>
@@ -56,7 +56,7 @@ window.location.replace("http://m.absrehab.com");
    <div class="container">
      <div class="row">
        <div class="col-xs-12">
-       <h1 class="text-center" font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;>Our Services</h1>
+       <h1 class="text-center">Our Services</h1>
          <p style="font-size:16px" class="text-center">Absolute Rehab Physical Therapy &amp; Sports Medicine is an independent, experienced, private rehabilitation practice. Physical Therapist owned offering services to rehabilitate after an injury or illness in a comfortable, caring and convenient setting.</p>
          <div class= "multi-column">
          <div class="column">
