--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="icon" type="image/png" href="favicon.png" />
 </head>
-<body>
+<body background="img/blue.jpg">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header"> <a href="index.html" target="_self"><img src="img/logo.png" alt="Absolute Rehab Logo" height="50"></a></div>
@@ -17,7 +17,6 @@
         <li><a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </li>
         <li><a href="mission.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mission&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </li>
         <li><a href="about.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="services.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Services&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="appointments.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li class="active"><a href="contact.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a> </li>
@@ -27,7 +26,7 @@
       </ul>
     </div>
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <header>
   <div class="jumbotron">
