--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="icon" type="image/png" href="favicon.png" />
 </head>
-<body>
+<body background="img/blue.jpg">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header"> <a href="index.html" target="_self"><img src="img/logo.png" alt="Absolute Rehab Logo" height="50"></a></div>
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <header>
   <div class="jumbotron">
@@ -67,9 +67,9 @@
     </div>
   </div>
 </header>
-<!-- / HEADER --> 
+<!-- / HEADER -->
 
-<!--  SECTION-1 --> 
+<!--  SECTION-1 -->
 
 <!-- FOOTER -->
 
@@ -82,11 +82,11 @@
     </div>
   </div>
 </footer>
-<!-- / FOOTER --> 
+<!-- / FOOTER -->
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
