--- a/events.html
+++ b/events.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 <nav class="navbar navbar-default">
-  <div class="container-fluid"> 
+  <div class="container-fluid">
     <div class="navbar-header">
-     
+
       <a href="index.html" target="_self"><img src="img/logo.png" alt="Absolute Rehab Logo" height="50"></a></div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <ul class="nav navbar-nav">
@@ -28,11 +28,15 @@
       </ul>
 <ul class="nav navbar-nav navbar-right">
         <li> </li>
-       
+
+
       </ul>
     </div>
 </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
+
+  <script type="text/javascript" src="http://www.medicalnewstoday.com/extnews.php?custom=y&id=118158&h=20&b=ddddff&fc=000000&fs=2&sb=y&c=8%2C119%2C82%2C78%2C45%2C"></script>
+
 </body>
 </html>
