--- a/events.html
+++ b/events.html
@@ -22,16 +22,12 @@
         <li><a href="mission.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mission&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </li>
         <li><a href="about.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="appointments.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li class="active"><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a> </li>
+        <li class="active"><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;News&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="sr-only">(current)</span></a> </li>
         <li><a href="contact.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
       </ul>
 <ul class="nav navbar-nav navbar-right">
         <li> </li>
 
-<<<<<<< HEAD
-
-=======
->>>>>>> ac7eb83f09360276e4d0a67df44dfa40d2edc87d
       </ul>
     </div>
 </div>
