--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ window.location.replace("http://m.absrehab.com");
         <li><a href="mission.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mission&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </li>
         <li><a href="about.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="appointments.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-        <li><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Events&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+        <li><a href="events.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;News&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
         <li><a href="contact.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -90,16 +90,21 @@ window.location.replace("http://m.absrehab.com");
 <!--  SECTION-1 -->
 
 <!-- FOOTER -->
-
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>Copyright © Absolute Rehab. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
+<div class="footer">
+  <p>Copyright © Absolute Rehab. All rights reserved.</p>
+</div>
+<style>
+.footer {
+   position: relative;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height:30px;
+   background-color: #585858 ;
+   color: white;
+   text-align: center;
+}
+</style>
 <!-- / FOOTER -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
